--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hello, this is authorization in VIM ID</h1>
-    <button onclick="window.location.href='/authorisation.html'">Ok, go to authorization</button>
+    <button onclick="window.location.href='templates/authorisation.html'">Ok, go to authorization</button>
 </body>
 </html>
