--- a/welcome.html
+++ b/welcome.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome, authorisation to good.</title>
+    <title>Welcome</title>
 </head>
 <body>
     <h1>All good</h1>
-    <button onclick="window.location.href='/target_site.html'">Next</button>
+    <button onclick="window.location.href='target_site.html'">Next</button>
 </body>
 </html>
