--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VIM ID</title>
+    <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
-    <h1>Hello, this is authorization in VIM ID</h1>
-    <button onclick="window.location.href='authorisation.html'">Ok, go to authorization</button>
+    <div class="container">
+        <h1>Welcome to VIM ID</h1>
+        <button onclick="window.location.href='authorisation.html'">Ok, go to authorization</button>
+    </div>
 </body>
 </html>
