--- a/welcome.html
+++ b/welcome.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
+    <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
-    <h1>All good</h1>
-    <button onclick="window.location.href='target_site.html'">Next</button>
+    <div class="container">
+        <h1>All good</h1>
+        <button onclick="window.location.href='target_site.html'">Next</button>
+    </div>
 </body>
 </html>
