--- a/home_vimid.html
+++ b/home_vimid.html
@@ -4,29 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VIM ID Home</title>
+    <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
-    <h1>Welcome to VIM ID Home</h1>
-    <form id="updateForm">
-        <label for="first_name">First Name:</label>
-        <input type="text" id="first_name" name="first_name" required>
-        <label for="last_name">Last Name:</label>
-        <input type="text" id="last_name" name="last_name" required>
-        <button type="submit">Save</button>
-    </form>
-    <h2>Authorized Sites</h2>
-    <ul id="sitesList"></ul>
-    <script>
-        document.getElementById('updateForm').addEventListener('submit', async function(e) {
-            e.preventDefault();
-            // Implement user details update logic
-        });
-        
-        async function loadSites() {
-            // Load and display authorized sites
-        }
-        
-        loadSites();
-    </script>
+    <div class="container">
+        <h1>Welcome to VIM ID Home</h1>
+        <form id="updateForm">
+            <label for="first_name">First Name:</label>
+            <input type="text" id="first_name" name="first_name" required>
+            <label for="last_name">Last Name:</label>
+            <input type="text" id="last_name" name="last_name" required>
+            <button type="submit">Save</button>
+        </form>
+        <h2>Authorized Sites</h2>
+        <ul id="sitesList"></ul>
+    </div>
+    <script src="../static/script.js"></script>
 </body>
 </html>
