--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
+    <header>
+        <h1>VIM ID</h1>
+    </header>
     <div class="container">
-        <h1>Welcome to VIM ID</h1>
+        <h2>Welcome to VIM ID</h2>
         <button onclick="window.location.href='authorisation.html'">Ok, go to authorization</button>
     </div>
 </body>
