--- a/welcome.html
+++ b/welcome.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
+    <header>
+        <h1>VIM ID</h1>
+    </header>
     <div class="container">
-        <h1>All good</h1>
+        <h2>All good</h2>
         <button onclick="window.location.href='target_site.html'">Next</button>
     </div>
 </body>
