--- a/home_vimid.html
+++ b/home_vimid.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
+    <header>
+        <h1>VIM ID</h1>
+    </header>
     <div class="container">
-        <h1>Welcome to VIM ID Home</h1>
+        <h2>Welcome to VIM ID Home</h2>
         <form id="updateForm">
             <label for="first_name">First Name:</label>
             <input type="text" id="first_name" name="first_name" required>
@@ -22,3 +25,4 @@
     <script src="../static/script.js"></script>
 </body>
 </html>
+
